Matenimiento de carreras

--- a/src/views/estudiantes/listado.hbs
+++ b/src/views/estudiantes/listado.hbs
@@ -34,8 +34,7 @@ text-white">Agregar estudiante</a>
                     <td>{{usuario}}</td>
                     <td>
                         <a class="btn btn-primary text-white">Modificar</a>
-                        <a href="/estudiantes/eliminar/{{idestudiante}}" class="btn
-btn-danger text-white">Eliminar</a>
+                        <a href="/estudiantes/eliminar/{{idestudiante}}" class="btn btn-danger text-white">Eliminar</a>
                     </td>
                 </tr>
                 {{/each}}
