--- a/src/views/estudiantes/actualizar.hbs
+++ b/src/views/estudiantes/actualizar.hbs
@@ -1,36 +1,37 @@
 <div class="container p-4">
     <div class="row justify-content-center">
-        <h1>Agregar estudiante</h1>
+        <h1>Actualizar estudiante</h1>
     </div>
     <div class="row justify-content-center mt-4">
         <div class="col-md-4">
-            <form method="POST" action="/estudiantes/agregar">
+            <form method="POST" action="/estudiantes/actualizar/{{estudiante.idestudiante}}">
                 <div class="form-group">
                     <label for="idestudiante">ID del estudiante</label>
                     <input type="text" class="form-control" name="idestudiante" id="idestudiante"
-                        placeholder="ID del estudiante" required />
+                        placeholder="ID del estudiante" value="{{estudiante.idestudiante}}" required />
                 </div>
                 <div class="form-group">
                     <label for="nombre">Nombre</label>
                     <input type="text" class="form-control" name="nombre" id="nombre"
-                        placeholder="Nombre del estudiante" autofocus required />
+                        placeholder="Nombre del estudiante" value="{{estudiante.nombre}}" required />
                 </div>
                 <div class="form-group">
                     <label for="apellido">Apellido</label>
                     <input type="text" class="form-control" name="apellido" id="apellido"
-                        placeholder="Apellido del estudiante" required />
+                        placeholder="Apellido del estudiante" value="{{estudiante.apellido}}" required />
                 </div>
                 <div class="form-group">
                     <label for="email">Correo</label>
-                    <input type="email" class="form-control" name="email" id="email" 
-                        placeholder="Correo del estudiante" required />
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Correo del estudiante"
+                        value="{{estudiante.email}}" required />
                 </div>
                 <div class="form-group">
                     <label for="idcarrera">Carrera</label>
                     <select class="form-control" name="idcarrera" id="idcarrera" required>
                         <option value="0">Seleccione una carrera</option>
                         {{#each carreras}}
-                        <option value="{{this.idcarrera}}">
+                        <option value="{{this.idcarrera}}" {{#eq this.idcarrera
+                            ../carreraSeleccionada.idcarrera}}selected{{/eq}}>
                             {{this.idcarrera}} - {{this.carrera}}
                         </option>
                         {{/each}}
@@ -39,10 +40,10 @@
                 <div class="form-group">
                     <label for="usuario">Usuario</label>
                     <input type="text" class="form-control" name="usuario" id="usuario"
-                        placeholder="Usuario del estudiante" required />
+                        placeholder="Usuario del estudiante" value="{{estudiante.usuario}}" required />
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-success btn-block">Guardar</button>
+                    <button type="submit" class="btn btn-success btn-block">Actualizar</button>
                 </div>
             </form>
             {{#if mensaje}}
